fix scrollbar main-panel

--- a/client/stylesheets/module/_sidebar.scss
+++ b/client/stylesheets/module/_sidebar.scss
@@ -82,8 +82,6 @@ li.active a {
 }
 
 .main-panel {
-    overflow-y: scroll;
-    -webkit-overflow-scrolling: touch;
     -webkit-transition: -webkit-transform 0.3s;
     transition: transform 0.3s;
 }
@@ -102,7 +100,6 @@ li.active a {
     z-index: 10;
     width: 100%;
     height: 100%;
-    //background: rgba(0, 0, 0, 0.3);
     content: '';
     opacity: 0;
     -webkit-transform: translate3d(100%, 0, 0);
